# windows-permissions-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: test.yml
src/: constants.rs  lib.rs  localheap.rs  structures.rs  utilities.rs  windows_secure.rs  wrappers.rs
src/structures/: ace.rs  acl.rs  mod.rs  sd.rs  sid.rs  trustee.rs
src/wrappers/: add_ace.rs  allocate_and_initialize_sid.rs  build_trustee_with_name.rs  build_trustee_with_sid.rs  convert_security_descriptor_to_string_security_descriptor.rs  convert_sid_to_string_sid.rs  convert_string_security_descriptor_to_security_descriptor.rs  convert_string_sid_to_sid.rs  copy_sid.rs  create_well_known_sid.rs  delete_ace.rs  equal_sid.rs  get_ace.rs  get_acl_information.rs  get_effective_rights_from_acl.rs  get_named_security_info.rs  get_security_descriptor_dacl_sacl.rs  get_security_descriptor_owner.rs  get_security_descriptor_owner_group.rs  get_security_info.rs  get_sid_identifier_authority.rs  get_sid_length_required.rs  get_sid_sub_authority.rs  get_sid_sub_authority_count.rs  get_trustee_form.rs  get_trustee_name.rs  get_windows_account_domain_sid.rs  is_valid_acl.rs  is_valid_security_descriptor.rs  is_valid_sid.rs  lookup_account_name.rs  lookup_account_sid.rs  mod.rs  set_named_security_info.rs  set_security_info.rs
