[package]
name = "windows-permissions"
version = "0.2.4"
authors = ["Daniel Dulaney <dan@dulaney.xyz>"]
edition = "2018"
description = "Safe Rust bindings to Windows permissions APIs"
repository = "https://github.com/danieldulaney/windows-permissions-rs"
readme = "README.md"
keywords = ["windows", "security", "permissions"]
categories = ["api-bindings", "authentication", "os::windows-apis"]
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]

[dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]}
bitflags = "1"

[dev-dependencies]
itertools = "0.8"
tempfile = "3"
